Changes: (1) delete the unnecessary yellowPages and zkHosname parameters; (2) start only one AM when inputnodes or other rete nodes deploying; (3) configure containers memory usage;