@@ -39,36 +39,43 @@ import org.apache.zookeeper.ZooDefs.Perms
 import org.apache.zookeeper.ZooDefs.Ids
 import java.net.URI
 import hu.bme.mit.incqueryd.yarn.ApplicationMaster
+import org.apache.curator.utils.ZKPaths
 
 object YarnActorService {
-  def create(client: AdvancedYarnClient, zkHostname: String, zooKeeperIpPath: String): Future[YarnActorService] = {
+
+  def create(client: AdvancedYarnClient, zkAMPath: String): List[Future[YarnActorService]] = {
     val jarPath = client.fileSystemUri + "/jars/hu.bme.mit.incqueryd.actorservice.server-1.0.0-SNAPSHOT.jar" // XXX duplicated path
-    val zk = IncQueryDZooKeeper.create(zkHostname)
-    if (zk.exists(zooKeeperIpPath, false) == null) {
-      zk.create(zooKeeperIpPath, Array[Byte](), ImmutableList.of(new ACL(Perms.ALL, Ids.ANYONE_ID_UNSAFE)), CreateMode.PERSISTENT)
-    }
+    val zk = IncQueryDZooKeeper.create()
+    IncQueryDZooKeeper.createDir(zkAMPath)
     val appMasterObjectName = ApplicationMaster.getClass.getName
     val appMasterClassName = appMasterObjectName.substring(0, appMasterObjectName.length - 1)
-    val actorServiceClassName = "hu.bme.mit.incqueryd.actorservice.server.ActorServiceApplication" // XXX duplicated class name to avoid dependency on runtime
+    val actorServiceClassName = "hu.bme.mit.incqueryd.actorservice.server.ActorServiceApplication" // XXX duplicated class name to avoid dependency on runtime 
+    val containers = IncQueryDZooKeeper.getChildPaths(zkAMPath)
+    
     val applicationId = client.runRemotely(
-        List(s"$$JAVA_HOME/bin/java -Xmx256M $appMasterClassName $jarPath $actorServiceClassName $zkHostname $zooKeeperIpPath server"),
-        jarPath, true)
+      List(s"$$JAVA_HOME/bin/java -Xmx64m -XX:MaxPermSize=64m -XX:MaxDirectMemorySize=128M $appMasterClassName $jarPath $actorServiceClassName $zkAMPath server"),
+      jarPath, true)
+
     val result = Promise[YarnActorService]()
-    zk.getData(zooKeeperIpPath, new Watcher() {
-      def process(event: WatchedEvent) {
-        event.getType() match {
-          case EventType.NodeCreated | EventType.NodeDataChanged => {
-            val data = zk.getData(zooKeeperIpPath, false, new Stat())
-            val ipWithPort = new String(data)
-            val ip = ipWithPort.replaceFirst(":\\d+", "")
-            Thread.sleep((8 seconds).toMillis) // Wait for server to start
-            result.success(YarnActorService(ip, applicationId))
+    containers.map { container =>
+      val zooKeeperIpPath = zkAMPath + "/" + container + "/ip"
+      IncQueryDZooKeeper.createDir(zooKeeperIpPath)
+      zk.getData(zooKeeperIpPath, new Watcher() {
+        def process(event: WatchedEvent) {
+          event.getType() match {
+            case EventType.NodeCreated | EventType.NodeDataChanged => {
+              val data = zk.getData(zooKeeperIpPath, false, new Stat())
+              val ipWithPort = new String(data)
+              val ip = ipWithPort.replaceFirst(":\\d+", "")
+              Thread.sleep((8 seconds).toMillis) // Wait for server to start
+              result.success(YarnActorService(ip, applicationId))
+            }
+            case _ => result.failure(new IllegalStateException(s"Unexpected event on ${zooKeeperIpPath}: $event"))
           }
-          case _ => result.failure(new IllegalStateException(s"Unexpected event on ${zooKeeperIpPath}: $event"))
         }
-      }
-    }, new Stat())
-    result.future
+      }, new Stat())
+      result.future
+    }
   }
 }
 
